@startuml

class Device{
- DeviceID: int
- Name: String
- Usage: Usage
}



enum Usage{

}

class Room{
- RoomNr: int
- Floor: int
- Name: String
}

Room "*"--"*" Device
(Room, Device) ..> Integration

Device <-r- Usage

note as Note
    Usage is A Lookup Table
    to get which Device it is
    for example
    "Chromecast" oder "Printer"
end note

Note -l- Usage
@enduml